# SourceCode

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  Makefile  ReadMe.md
inc/: chat_server.h  database_manager.h
src/: chat_server.cpp  database_manager.cpp  main.cpp
tests/: test_chat_server.cpp
